src/pages/hero.css
@media (max-width: 991px) {
  #section-1 {
    padding-top: 200px !important;
  }
  #div-1 {
    flex-direction: column !important;
  }
  #div-2 {
    width: 100% !important;
    max-width: 700px !important;
    margin-left: auto !important;
    margin-right: auto !important;
  }
  #div-3 {
    padding-top: 0 !important;
  }
  #div-4 {
    flex-direction: column-reverse !important;
    justify-content: center !important;
  }
  #h2-1 {
    margin-top: 25px !important;
    margin-bottom: 20px !important;
  }
  #p-1 {
    max-width: 575px !important;
    margin-bottom: 25px !important;
    margin-left: auto !important;
    margin-right: auto !important;
  }
  #div-6 {
    justify-content: center !important;
    align-items: center !important;
    margin-bottom: 25px !important;
  }
  #a-1 {
    padding-top: 16px !important;
    padding-bottom: 16px !important;
  }
  #a-2 {
    padding-top: 16px !important;
    padding-bottom: 16px !important;
  }
  #div-7 {
    width: 100% !important;
    max-width: 600px !important;
    margin-left: auto !important;
    margin-right: auto !important;
  }
  #img-1 {
    max-width: 409px !important;
    display: block !important;
    bottom: -29px !important;
    right: 30px !important;
  }
  #img-2 {
    width: 100% !important;
    max-width: 369px !important;
    display: block !important;
    bottom: -180px !important;
    left: 62px !important;
  }
  #div-8 {
    width: 150px !important;
    height: 150px !important;
    bottom: 150px !important;
    left: -3% !important;
  }
  #img-3 {
    width: 110px !important;
  }
  #div-9 {
    display: none !important;
  }
}

@media (max-width: 767px) {
  #section-1 {
    padding-top: 170px !important;
  }
  #div-2 {
    max-width: 440px !important;
  }
  #div-5 {
    width: 50px !important;
  }
  #h2-1 {
    margin-top: 20px !important;
    margin-bottom: 15px !important;
  }
  #p-1 {
    max-width: 380px !important;
  }
  #div-7 {
    max-width: 440px !important;
  }
  #img-1 {
    max-width: 350px !important;
    right: 20px !important;
  }
  #img-2 {
    max-width: 295px !important;
    left: 20px !important;
  }
  #div-8 {
    width: 120px !important;
    height: 120px !important;
  }
  #img-3 {
    width: 90px !important;
  }
}

@media (max-width: 479px) {
  #section-1 {
    padding-top: 140px !important;
  }
  #div-2 {
    max-width: 290px !important;
  }
  #p-1 {
    max-width: 265px !important;
  }
  #div-6 {
    flex-direction: column !important;
    margin-bottom: 20px !important;
  }
  #a-1 {
    padding-top: 14px !important;
    padding-right: 30px !important;
    padding-bottom: 14px !important;
    padding-left: 30px !important;
  }
  #a-2 {
    padding-top: 14px !important;
    padding-right: 30px !important;
    padding-bottom: 14px !important;
    padding-left: 30px !important;
  }
  #div-7 {
    max-width: 320px !important;
  }
  #img-1 {
    max-width: 300px !important;
    display: none !important;
  }
  #img-2 {
    display: none !important;
  }
  #div-8 {
    width: 100px !important;
    height: 100px !important;
    bottom: 90px !important;
  }
  #img-3 {
    width: 75px !important;
  }
}

